--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@ z-index: 3;
 	<div data-collapse="none" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease"
 		role="banner" class="nav w-nav">
 		<div class="nav__container"><a href="#" class="nav__logo-wrapper w-nav-brand"><img
-					src="https://cdn.prod.website-files.com/674dd5bc3dadcb142263c95c/674dd704b1a6ebace94a0224_logo.png"
+					src="https://leocoin.club/logo.png"
 					loading="lazy" width="100" sizes="100.00000762939453px" alt=""
-					srcset="https://cdn.prod.website-files.com/674dd5bc3dadcb142263c95c/674dd704b1a6ebace94a0224_logo-p-500.png 500w, https://cdn.prod.website-files.com/674dd5bc3dadcb142263c95c/674dd704b1a6ebace94a0224_logo-p-800.png 800w, https://cdn.prod.website-files.com/674dd5bc3dadcb142263c95c/674dd704b1a6ebace94a0224_logo-p-1080.png 1080w, https://cdn.prod.website-files.com/674dd5bc3dadcb142263c95c/674dd704b1a6ebace94a0224_logo-p-1600.png 1600w, https://cdn.prod.website-files.com/674dd5bc3dadcb142263c95c/674dd704b1a6ebace94a0224_logo-p-2000.png 2000w, https://cdn.prod.website-files.com/674dd5bc3dadcb142263c95c/674dd704b1a6ebace94a0224_logo.png 2048w"
+					srcset="https://leocoin.club/logo.png 500w, https://cdn.prod.website-files.com/674dd5bc3dadcb142263c95c/674dd704b1a6ebace94a0224_logo-p-800.png 800w, https://cdn.prod.website-files.com/674dd5bc3dadcb142263c95c/674dd704b1a6ebace94a0224_logo-p-1080.png 1080w, https://cdn.prod.website-files.com/674dd5bc3dadcb142263c95c/674dd704b1a6ebace94a0224_logo-p-1600.png 1600w, https://cdn.prod.website-files.com/674dd5bc3dadcb142263c95c/674dd704b1a6ebace94a0224_logo-p-2000.png 2000w, https://cdn.prod.website-files.com/674dd5bc3dadcb142263c95c/674dd704b1a6ebace94a0224_logo.png 2048w"
 					class="image" /></a></div>
 					
 	</div>
