--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 	<script type="text/javascript">WebFont.load({ google: { families: ["Poppins:regular,500,600"] } });</script>
 	<script
 		type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
-	<link href="https://cdn.prod.website-files.com/img/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-	<link href="https://cdn.prod.website-files.com/img/webclip.png" rel="apple-touch-icon" />
+	<link href="https://thememecoin.github.io/logo.ico" rel="shortcut icon" type="image/x-icon" />
+	<link href="https://thememecoin.github.io/logo.ico" rel="apple-touch-icon" />
 	<style>
 		body {
 			-webkit-font-smoothing: antialiased;
